# dynoverb

./: .gitignore  CMakeLists.txt  Dynoverb.jucer  USAGE.md
JuceLibraryCode/: JuceHeader.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AlgorithmicReverb.cpp  AlgorithmicReverb.h  DSPUtils.h  GatedReverb.cpp  GatedReverb.h  ReverbBase.h  ShimmerReverb.cpp  ShimmerReverb.h  SpringReverb.cpp  SpringReverb.h
Source/UI/: LookAndFeel.h
background_candidates/: brazilian_twilight_purple_cyan_INFO.txt
